src/test/ui/parser/issue-68987-unmatch-issue-2.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-68987-unmatch-issue-2.rs:1:32
   |
LL | async fn obstest() -> Result<> {
   |                                ^ unclosed delimiter
LL |     let obs_connect = || -> Result<(), MyError) {
   |                                               ^ mismatched closing delimiter

error: unexpected closing delimiter: `}`
  --> $DIR/issue-68987-unmatch-issue-2.rs:12:1
   |
LL | }
   | ^ unexpected closing delimiter

error: aborting due to 2 previous errors

